Add register template

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
     <header>
         <!-- top navbar -->
-		<nav class="nav-extended pink darken-1">
+		<nav class="nav-extended light-blue darken-1">
 			<div class="nav-wrapper">
 				<a href="{{ url_for('get_classes') }}" class="brand-logo">Class Manager</a>
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
@@ -26,21 +26,21 @@
 					<li><a href="#">Manage Categories</a></li>
 					<li><a href="#">Log Out</a></li>
 					<li><a href="#">Log In</a></li>
-					<li><a href="#">Register</a></li>
+					<li><a href="{{ url_for('register') }}">Register</a></li>
 				</ul>
 			</div>
 		</nav>
 
         <!-- mobile sidenav -->
 		<ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align pink-text text-darken 1">Class Manager</h4></li>
+            <li><h4 class="center-align light-blue-text text-darken 4">Class Manager</h4></li>
             <li><a href="{{ url_for('get_classes') }}">Home</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">New Class</a></li>
             <li><a href="#">Manage Categories</a></li>
             <li><a href="#">Log Out</a></li>
             <li><a href="#">Log In</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
 		</ul>
 	</header>
 
