--- a/templates/classes.html
+++ b/templates/classes.html
@@ -2,12 +2,24 @@
 {% block content %}
 
 {% for class in classes %}
-        {{ class.class_name }}<br>
-        {{ class.category_name }}<br>
-        {{ class.class_description }}<br>
-        {{ class.is_full }}<br>
-        {{ class.class_date }}<br>
-        {{ class.class_time }}<br>
-    {% endfor %}
+
+  <div class="row">
+    <div class="col s12 m12 lg12">
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">{{ class.class_name }}</span>
+            <p>{{ class.class_date }} | {{ class.class_time }}</p>
+            <p>{{ class.category_name }}</p>
+            <p>{{ class.class_description }}</p>
+            <p>{{ class.is_full }}</p>
+        </div>
+        <div class="card-action">
+          <a href="#">Book</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+{% endfor %}
 
 {% endblock %}
